[package]
name = "jitr"
version = "1.0.0"
authors = ["c0rp3n <ojhitchcock@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
rand = "0.7.3"
structopt = { version = "0.3", default-features = false }
